Apply API changes from new versions of webgl-wrapper and webgl-gui

--- a/html/index.html
+++ b/html/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script type="text/javascript" src="ca_3d.js"></script>
+    <script type="text/javascript" src="generated/ca_3d.js"></script>
 
     <canvas id="canvas" width="800" height="800"></canvas>
 
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", async function(event) {
-        await wasm_bindgen('ca_3d_bg.wasm');
+        await wasm_bindgen("generated/ca_3d_bg.wasm");
       });
     </script>
   </body>
